--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Aug 01 09:56:07 IST 2023
-sdk.dir=C\:\\Users\\Jemis vocsy\\AppData\\Local\\Android\\Sdk
+#Fri Aug 11 09:57:11 ICT 2023
+sdk.dir=C\:\\Users\\LongNV\\AppData\\Local\\Android\\Sdk
