--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation project(path: ':recorddialog')
-    implementation project(path: ':chatbar')
+
     implementation 'com.google.android.material:material:1.7.0-alpha02'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -74,12 +73,11 @@ dependencies {
     implementation 'ai.api:sdk:2.0.7@aar'
     implementation 'ai.api:libai:1.6.12'
     implementation 'com.google.android.play:core:1.10.0'
-//    implementation 'com.github.nguyenhoanglam:ImagePicker:1.4.3'
-    // Java V2
+
     implementation 'com.google.cloud:google-cloud-dialogflow:2.0.0'
-    // for Remote Procedure Call to avoid "No functional channel service provider found" error while creating SessionsClient
+    
     implementation 'io.grpc:grpc-okhttp:1.32.2'
-//    implementation 'com.github.mreram:showcaseview:1.2.0'
+
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'commons-io:commons-io:2.6'
     implementation 'de.cketti.mailto:email-intent-builder:2.0.0'
@@ -97,20 +95,16 @@ dependencies {
 
     implementation 'com.jcminarro:RoundKornerLayouts:0.4.0'
 
-    def lifecycle_version = "2.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.0.0"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
 
     implementation 'com.nabinbhandari.android:permissions:3.8'
 
 
-    // https://developer.android.com/google/play/billing/integrate
-    def billing_version = "5.0.0"
-    implementation "com.android.billingclient:billing:$billing_version"
-    implementation "com.android.billingclient:billing-ktx:$billing_version"
+    implementation "com.android.billingclient:billing:5.0.0"
+    implementation "com.android.billingclient:billing-ktx:5.0.0"
 
-    // https://github.com/anjlab/android-inapp-billing-v3
     implementation 'com.anjlab.android.iab.v3:library:2.0.3'
 
 }
