--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,6 @@ dependencies {
 
     implementation 'com.anjlab.android.iab.v3:library:2.0.3'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
